tests/rosetta/out/C/catalan-numbers-2.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:36:00Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:36:00Z
#include <stdio.h>
#include <stdlib.h>

static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int catalanRec(int n) {
  if (n == 0) {
    return 1;
  }
  int t1 = 2 * n;
  int t2 = t1 - 1;
  int t3 = 2 * t2;
  int t5 = t3 * catalanRec(n - 1);
  return (int)((t5 / (n + 1)));
}

int main() {
  for (int i = 1; i < 16; i++) {
    char *tmp1 = _str(catalanRec(i));
    printf("%s\n", tmp1);
  }
}

int main() {
  main();
  return 0;
}
